# octoprint-ansible

./: README.md  ansible.cfg  plugins.yml  pyproject.toml  sites.yml
inventory/: hosts
inventory/group_vars/: all.yml
roles/: requirements.yml
roles/artis3n.tailscale/meta/: .galaxy_install_info
roles/nleiva.grafana_agent/meta/: .galaxy_install_info
roles/nleiva.grafana_agent/templates/: agent-config.yaml.j2  promtail-config.yaml.j2
roles/octoprint-plugins/: README.md
roles/octoprint-plugins/handlers/: main.yml
roles/octoprint-plugins/tasks/: main.yml
templates/: requirements.txt
