[tool.poetry]
name = "octoprint-ansible"
version = "0.1.0"
description = ""
authors = ["josua.blejeru <josua@blejeru.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ansible = "^5.3.0"
jmespath = "^0.10.0"
ansible-lint = "^5.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
